--- a/Aplikacja/app/src/main/res/layout/item_item_list.xml
+++ b/Aplikacja/app/src/main/res/layout/item_item_list.xml
@@ -11,12 +11,32 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="6dp"
         android:paddingTop="6dp">
         <TextView
             android:id="@+id/text"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:maxLines="1"
             android:text="@{viewModel.item.name}"
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            app:layout_widthPercent="80%"/>
+
+        <TextView
+            android:id="@+id/category"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:paddingTop="6dp"
+            android:text="@{String.format(@string/category, viewModel.item.category.toString().toLowerCase())}"
+            android:textAppearance="@android:style/TextAppearance.Small"
+            android:textColor="@color/colorAccent"
+            app:layout_widthPercent="80%"/>
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/category"
+            android:text="@{String.format(@string/priority, viewModel.item.priority.toString().toLowerCase())}"
+            android:textAppearance="@android:style/TextAppearance.Small"
+            android:textColor="@color/colorAccent"
             app:layout_widthPercent="80%"/>
 
         <CheckBox
@@ -26,13 +46,13 @@
             android:layout_toRightOf="@id/text"
             android:checked="@{viewModel.item.isChecked}"
             app:layout_widthPercent="10%"
-            app:onCheckedChangeListener="@{viewModel.onCheckChangedCommand}"/>
+            app:onCheckedChangeListener="@{viewModel::onCheckChangedCommand}"/>
 
         <ImageView
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/checkbox"
-            android:onClick="@{viewModel.onDeleteCommand}"
+            android:onClick="@{viewModel::onDeleteCommand}"
             android:scaleType="fitEnd"
             android:src="@drawable/delete"
             app:layout_widthPercent="10%"/>
