--- a/Aplikacja/app/src/main/res/layout/item_item_list.xml
+++ b/Aplikacja/app/src/main/res/layout/item_item_list.xml
@@ -11,6 +11,7 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:onClick="@{viewModel::onClickCommand}"
         android:paddingBottom="6dp"
         android:paddingTop="6dp">
